--- a/404.html
+++ b/404.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en-us">
-  <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+  <head>
     <title>404 Page not found // Alanfliu Blog</title>
     <link rel="shortcut icon" href="/favicon.ico" />
     <meta charset="utf-8" />
@@ -20,7 +20,7 @@
   <meta name="twitter:title" content="404 Page not found">
   <meta name="twitter:description" content="前端程序员，努力探索世界中~~">
 
-    <meta property="og:url" content="http://localhost:1313/404.html">
+    <meta property="og:url" content="https://alanfliu.github.io/404.html">
   <meta property="og:site_name" content="Alanfliu Blog">
   <meta property="og:title" content="404 Page not found">
   <meta property="og:description" content="前端程序员，努力探索世界中~~">
@@ -31,7 +31,7 @@
   </head>
   <body>
     <header class="app-header">
-      <a href="http://localhost:1313/"><img class="app-header-avatar" src="/avatar.jpg" alt="Alanfliu" /></a>
+      <a href="https://alanfliu.github.io/"><img class="app-header-avatar" src="/avatar.jpg" alt="Alanfliu" /></a>
       <span class="app-header-title">Alanfliu Blog</span>
       <p>前端程序员，努力探索世界中~~</p>
       <div class="app-header-social">
